objects/User.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(IsActive = True, &quot;Active&quot;, &quot;InActive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivated_Date__c</fullName>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_approver_field__c</fullName>
        <description>This field represents the users discount approver when attempting to discount opportunities.</description>
        <inlineHelpText>Usually the users manager.</inlineHelpText>
        <label>Discount approver field</label>
        <relationshipName>Discount_approver_field</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Frozen_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frozen Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frozen_Date__c</fullName>
        <label>Frozen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_User_is_Frozen__c</fullName>
        <label>Reason User is Frozen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Company</fullName>
                </value>
                <value>
                    <fullName>Account has been compromised</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_characters_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 characters ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>image__c</fullName>
        <label>image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>test_currency__c</fullName>
        <label>test currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>